feat: operator nearly integrated, need to get Operator at root and also remove lodash and update styling
